--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -9,7 +9,7 @@
   "bunpou": "Japanese Grammars",
   "settei": "Setting",
   "setteiHanTu": "For only vietnamese",
-  "setteigengo": "Choices language",
+  "settingLanguage": "Choices language",
   "flashcard": "Flash Card",
   "flashcardview": "Flash Card",
   "signIn": "Sign In",
