--- a/App/I18n/ja.json
+++ b/App/I18n/ja.json
@@ -9,7 +9,7 @@
   "bunpou": "文法",
   "settei": "設定",
   "setteiHanTu": "ベトナム語のため",
-  "setteigengo": "表示言語を選択",
+  "settingLanguage": "表示言語を選択",
   "flashcard": "フラッシュカード",
   "flashcardview": "フラッシュカード",
   "signIn": "登録",
