--- a/App/I18n/vi.json
+++ b/App/I18n/vi.json
@@ -9,7 +9,7 @@
   "bunpou": "Ngữ pháp",
   "settei": "Thiết lập",
   "setteiHanTu": "Cho riêng Tiếng Việt",
-  "setteigengo": "Chọn ngôn ngữ hiển thị",
+  "settingLanguage": "Chọn ngôn ngữ hiển thị",
   "flashcard": "Flash Card",
   "flashcardview": "Flash Card",
   "signIn": "Se connecter",
