Rename app name

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,3 @@
 <resources>
-
-
-
-
-    <string name="app_name">KanjiMaster</string>
+    <string name="app_name">Kanji Lite</string>
 </resources>
