--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -2,7 +2,7 @@
   "kanjimaster": "Kanji Master",
   "home": "Home",
   "kanji": "Kanji",
-  "kanjijlpt": "Kanji By JLPT",
+  "kanjijlpt": "3000 Kanji",
   "niteirukanji": "Resemble Kanji",
   "douonigigo": "Japanese Homophones",
   "tango": "Japanese Words",
@@ -12,27 +12,28 @@
   "settingLanguage": "Choices language",
   "flashcard": "Flash Card",
   "flashcardview": "Flash Card",
-  "signIn": "Sign In",
-  "logOut": "Log Out",
-  "loginLogoutExampleTitle": "Login/Logout Redux + Sagas Example",
-  "progressiveImageComponent": "Progressive Image Component",
-  "api": "API",
-  "locale": "I18n Locale",
-  "rnVectorIcons": "RN Vector Icons",
-  "loginWithFacebook": "Login with Facebook",
-  "rnAnimatable": "RN Animatable",
-  "igniteGenerated": "Ignite Generate Screens",
-  "forgotPassword": "Forgot Password",
-  "username": "Username",
-  "password": "Password",
-  "cancel": "Cancel",
-  "welcome": "Welcome",
-  "login": "Login",
-  "tempIndicator": "F",
-  "componentExamples": "Component Examples",
-  "usageExamples": "Usage Examples",
-  "apiTesting": "API Testing",
-  "themeSettings": "Theme Settings",
-  "deviceDetails": "Device Details",
-  "noItems": "No Items"
+  "learning":"Learning",
+  "desk":"Desk",
+  "createDesk":"Create desk",
+  "createNewDesk": "Create new Desk",
+  "deskName":"Desk name",
+  "addMoreDataByCategory":"Add more data by category",
+  "inputADeskName":"Input a desk name",
+  "selectAItem":"Select a item",
+  "downloadData":"Download data",
+  "downloadDataSample":"Download data sample",
+  "dataWasDownloadSuccessful":"Data was downloaded successfully",
+  "pleaseCheckTheStorage":"Please check the storage",
+  "pleaseCheckTheNetworkConnection":"Please check the network connection",
+  "addSuccessful":"Add successful",
+  "haveBeenAddedToDesk":"Have been added to desk",
+  "cantAddToDesk":"Can't add to desk",
+  "cantFindTheDesk":"Can't find the desk",
+  "cantStudyTheDesk":"Can't study this desk",
+  "cantAnswerThisCard":"Can't answer this card",
+  "cantDeleteThisDesk":"Can't delete this desk",
+  "cantFindTheKanji":"Can't find the Kanji",
+  "youAreUsingSampleData":"You are using sample data",
+  "copyRight":"Made with ❤️ by Kantan Group",
+  "cancel":"Cancel"
 }
