--- a/App/I18n/ja.json
+++ b/App/I18n/ja.json
@@ -2,7 +2,7 @@
   "kanjimaster": "漢字マスタ",
   "home": "ホーム",
   "kanji": "漢字",
-  "kanjijlpt": "Kanji By JLPT",
+  "kanjijlpt": "フル漢字",
   "niteirukanji": "似てる漢字",
   "douonigigo": "同音異義語",
   "tango": "単語",
@@ -12,27 +12,28 @@
   "settingLanguage": "表示言語を選択",
   "flashcard": "フラッシュカード",
   "flashcardview": "フラッシュカード",
-  "signIn": "登録",
-  "logOut": "ログアウト",
-  "loginLogoutExampleTitle": "Connexion / Déconnexion Redux + Sagas Exemple",
-  "progressiveImageComponent": "Composant Image Progressive",
-  "api": "Mon Dieu!  'Une API pour vous!",
-  "locale": "国際化ロケール",
-  "rnVectorIcons": "RN icônes vectorielles",
-  "loginWithFacebook": "Facebookでログイン",
-  "rnAnimatable": "RN Animatable",
-  "igniteGenerated": "Ignite Générer des Écrans",
-  "forgotPassword": "Mot de passe oublié",
-  "username": "ユーザー名",
-  "password": "パスワード",
-  "cancel": "キャンセル",
-  "welcome": "Bienvenue",
-  "login": "ログイン",
-  "tempIndicator": "C",
-  "componentExamples": "Exemples de Composants",
-  "usageExamples": "Exemples d'utilisation",
-  "apiTesting": "API Testing",
-  "themeSettings": "Réglage des thèmes",
-  "deviceDetails": "Détails du périphérique",
-  "noItems": "Aucun"
+  "learning":"学習",
+  "desk":"ノート",
+  "createDesk":"ノートを作成",
+  "createNewDesk": "ノートを作成",
+  "deskName":"ノート名",
+  "addMoreDataByCategory":"カテゴリ別にデータを追加",
+  "inputADeskName":"ノート名を入れてください。",
+  "selectAItem":"カテゴリ別を選択してください。",
+  "downloadData":"データをダウンロード",
+  "downloadDataSample":"サンプル・データをダウンロード",
+  "dataWasDownloadSuccessful":"データが正常にダウンロードされました。",
+  "pleaseCheckTheStorage":"ストレージを確認してください。",
+  "pleaseCheckTheNetworkConnection":"ネットワーク接続を確認してください。",
+  "addSuccessful":"正常に追加されました。",
+  "haveBeenAddedToDesk":"ノートに追加されました。",
+  "cantAddToDesk":"ノートに追加することはできません。",
+  "cantFindTheDesk":"ノートを見つけることができません。",
+  "cantStudyTheDesk":"このノートを勉強することはできません。",
+  "cantAnswerThisCard":"このカードに答えることができません。",
+  "cantDeleteThisDesk":"このノートを削除することはできません。",
+  "cantFindTheKanji":"漢字を見つけることができません。",
+  "youAreUsingSampleData":"サンプル・データを使用しています。",
+  "copyRight":"Made with ❤️ by Kantan Group",
+  "cancel":"キャンセル"
 }
