--- a/App/I18n/vi.json
+++ b/App/I18n/vi.json
@@ -2,7 +2,7 @@
   "kanjimaster": "Bậc thầy Kanji",
   "home": "Trang chủ",
   "kanji": "Kanji",
-  "kanjijlpt": "Kanji By JLPT",
+  "kanjijlpt": "3000 Kanji",
   "niteirukanji": "Kanji giống nhau",
   "douonigigo": "Đồng âm khác nghĩa",
   "tango": "Từ vựng",
@@ -12,27 +12,28 @@
   "settingLanguage": "Chọn ngôn ngữ hiển thị",
   "flashcard": "Flash Card",
   "flashcardview": "Flash Card",
-  "signIn": "Se connecter",
-  "logOut": "Se déconnecter",
-  "loginLogoutExampleTitle": "Connexion / Déconnexion Redux + Sagas Exemple",
-  "progressiveImageComponent": "Composant Image Progressive",
-  "api": "Mon Dieu!  'Une API pour vous!",
-  "locale": "I18n Paramètres régionaux",
-  "rnVectorIcons": "RN icônes vectorielles",
-  "loginWithFacebook": "Se connecter avec Facebook",
-  "rnAnimatable": "RN Animatable",
-  "igniteGenerated": "Ignite Générer des Écrans",
-  "forgotPassword": "Mot de passe oublié",
-  "username": "Nom d\"utilisateur",
-  "password": "Mot de passe",
-  "cancel": "Annuler",
-  "welcome": "Bienvenue",
-  "login": "S\"identifier",
-  "tempIndicator": "C",
-  "componentExamples": "Exemples de Composants",
-  "usageExamples": "Exemples d'utilisation",
-  "apiTesting": "API Testing",
-  "themeSettings": "Réglage des thèmes",
-  "deviceDetails": "Détails du périphérique",
-  "noItems": "Aucun"
+  "learning":"Luyện tập",
+  "desk":"Thẻ học",
+  "createDesk":"Tạo bộ thẻ học",
+  "createNewDesk": "Tạo một bộ thẻ học",
+  "deskName":"Tên thẻ học",
+  "addMoreDataByCategory":"Thêm dữ liệu theo nhóm",
+  "inputADeskName":"Nhập tên thẻ học",
+  "selectAItem":"Hãy chọn một nhóm dữ liệu",
+  "downloadData":"Tải dữ liệu",
+  "downloadDataSample":"Tải dữ liệu dùng thử",
+  "dataWasDownloadSuccessful":"Tải dữ liệu về thành công",
+  "pleaseCheckTheStorage":"Hãy kiểm tra bộ nhớ của điện thoại",
+  "pleaseCheckTheNetworkConnection":"Hãy kiểm tra kết nối mạng",
+  "addSuccessful":"Thêm thành công",
+  "haveBeenAddedToDesk":"Đã được thêm vào thẻ học",
+  "cantAddToDesk":"Không thể thêm vào thẻ học này",
+  "cantFindTheDesk":"Không tìm thấy thẻ học",
+  "cantStudyTheDesk":"Không học được bộ thẻ này",
+  "cantAnswerThisCard":"Không thể trả lời thẻ này",
+  "cantDeleteThisDesk":"Không thể xóa bộ thẻ này",
+  "cantFindTheKanji":"Không tìm thấy từ Kanji này",
+  "youAreUsingSampleData":"Bạn đang sử dụng dữ liệu tạm thời",
+  "copyRight":"Made with ❤️ by Kantan Group",
+  "cancel":"Bỏ qua"
 }
